Fixed #2474 - Layout issue when creating person form with Suite 7 theme

--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -1,6 +1,10 @@
-/*********************************************************************************
+/**
+ *
  * SugarCRM Community Edition is a customer relationship management program developed by
  * SugarCRM, Inc. Copyright (C) 2004-2013 SugarCRM Inc.
+ *
+ * SuiteCRM is an extension to SugarCRM Community Edition developed by SalesAgility Ltd.
+ * Copyright (C) 2011 - 2017 SalesAgility Ltd.
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Affero General Public License version 3 as published by the
@@ -11,7 +15,7 @@
  *
  * This program is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more
+ * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
  * details.
  *
  * You should have received a copy of the GNU Affero General Public License along with
@@ -28,17 +32,10 @@
  *
  * In accordance with Section 7(b) of the GNU Affero General Public License version 3,
  * these Appropriate Legal Notices must retain the display of the "Powered by
- * SugarCRM" logo. If the display of the logo is not reasonably feasible for
- * technical reasons, the Appropriate Legal Notices must display the words
- * "Powered by SugarCRM".
- ********************************************************************************/
-
-/*********************************************************************************
-
- * Description:  Contains a variety of utility functions used to display UI
- * components such as form headers and footers.  Intended to be modified on a per
- * theme basis.
- ********************************************************************************/
+ * SugarCRM" logo and "Supercharged by SuiteCRM" logo. If the display of the logos is not
+ * reasonably feasible for technical reasons, the Appropriate Legal Notices must
+ * display the words "Powered by SugarCRM" and "Supercharged by SuiteCRM".
+ */
 
 /* MAIN NAV STYLES */
 
@@ -6679,3 +6676,75 @@ ul.clickMenu.searchAppliedAlert {
 .action-link label {
   padding: 5px 0 0 0;
 }
+
+
+/*Form to Person section*/
+#fieldChoices #fieldcontainer {
+  margin: 0 auto;
+  width: 100%;
+  min-height: 100%;
+  background-color: transparent;
+  border: 0;
+}
+#fieldChoices .field-list {
+  background-color: white;
+  border-left: 2px solid #D8D8DC;
+  border-right: 2px solid #D8D8DC;
+  border-top: 3px solid #D8D8DC;
+  border-bottom: 3px solid #D8D8DC;
+  box-shadow: 0 1px 1px 0 rgba(50, 50, 50, 0.75);
+  float: left;
+  height: 100%;
+  margin: 0;
+  min-height: 240px;
+  padding: 15px;
+  text-align: center;
+  width: 22%;
+
+}
+#fieldChoices .field-list input, .field-list textarea {
+  width: 240px;
+  margin: 1px 5px;
+}
+#fieldChoices .field-list input {
+  height: 30px;
+}
+#fieldChoices .field {
+}
+#fieldChoices .field-header {
+  border-radius: 2px 2px 0 0;
+  color: #444444;
+  font-size: 14px;
+  height: 22px;
+  position: relative;
+}
+
+#fieldChoices .field-type {
+  float: left;
+}
+#fieldChoices .field-list input[type="button"] {
+  width: 100px;
+}
+#fieldChoices .field > .field-header {
+}
+#fieldChoices .field-container{
+  max-height: 300px;
+  min-height: 300px;
+  height:300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+#fieldChoices .optionButtonsHolder {
+  margin-top: 5px;
+}
+#fieldChoices .title {
+  display: inline-block;
+  width: 22%;
+  text-align: center;
+  font-size: 15px;
+  color: #444444;
+}
+#fieldChoices #personTypeSelect {
+  margin-bottom: 20px;
+}
+/*Form to Person section*/
